<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context="com.example.android.gameofthronesquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"
            android:src="@drawable/got1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryLight"
            android:gravity="center_horizontal"
            android:padding="24sp"
            android:text="@string/question1"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginLeft="12dp"
                android:onClick="decrement"
                android:text="@string/buttonMinus" />

            <TextView
                android:id="@+id/valueQuestion1_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"
                android:background="@color/colorBackground"
                android:padding="10dp"
                android:text="@string/number"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:onClick="increment"
                android:text="@string/buttonPlus" />

        </LinearLayout>

        <TextView
            android:id="@+id/correctAnswer1"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/got2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center_horizontal"
                android:padding="24sp"
                android:text="@string/question2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/button_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="20dp">

                <RadioButton
                    android:id="@+id/question2_button1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/question2_button1" />

                <RadioButton
                    android:id="@+id/question2_button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/question2_button2" />

                <RadioButton
                    android:id="@+id/question2_button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/question2_button3" />

                <RadioButton
                    android:id="@+id/question2_button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="@string/question2_button4" />

            </RadioGroup>

            <TextView
                android:id="@+id/correctAnswer2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/got3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center_horizontal"
                android:padding="24sp"
                android:text="@string/question3"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <CheckBox
                android:id="@+id/question3_checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/question3_checkbox1" />

            <CheckBox
                android:id="@+id/question3_checkbox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/question3_checkbox2" />

            <CheckBox
                android:id="@+id/question3_checkbox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/question3_checkbox3" />

            <CheckBox
                android:id="@+id/question3_checkbox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/question3_checkbox4" />

            <CheckBox
                android:id="@+id/question3_checkbox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/question3_checkbox5" />

            <CheckBox
                android:id="@+id/question3_checkbox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/question3_checkbox6" />

            <CheckBox
                android:id="@+id/question3_checkbox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/question3_checkbox7" />

            <CheckBox
                android:id="@+id/question3_checkbox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:text="@string/question3_checkbox8" />

            <TextView
                android:id="@+id/correctAnswer3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorPrimaryDark"
                android:src="@drawable/got4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryLight"
                android:gravity="center_horizontal"
                android:padding="24sp"
                android:text="@string/question4"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/question4_answer_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="20dp"
                android:hint="@string/question4_hint"
                android:inputType="textCapWords"
                android:paddingLeft="20dp" />

            <TextView
                android:id="@+id/correctAnswer4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:textSize="20sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

        <Button
            android:id="@+id/submit_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:onClick="submitScore"
            android:padding="25dp"
            android:text="@string/submit_button"
            android:textAllCaps="true" />

            <Button
                android:id="@+id/reset_button"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="20dp"
                android:onClick="reset"
                android:padding="25dp"
                android:text="@string/reset_button"
                android:textAllCaps="true" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
